Basic openapi.yaml handler.
